tests/snapshots/examples_fixtures/type_system__failing__92_hm_if_branch_contextual_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/type_system/failing/92_hm_if_branch_contextual_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The branches of this `if` expression produce different types.

  --> examples/type_system/failing/92_hm_if_branch_contextual_mismatch.flx:6:9
  |
4 |         42

  |         -- `then` branch returns `Int`
5 |     } else {

6 |         "nope"
  |         ^^^^^^
  |         ------ `else` branch returns `String`

Help:
  Both branches must return the same type. Change one branch to match `Int` or `String`.
== stdout ==
<not executed>
